# crc32daemon

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  checksum_worker.cpp  checksum_worker.h  crc32.cpp  crc32.h  dir_traverser.cpp  dir_traverser.h  event_queue.cpp  event_queue.h  main.cpp  notifier.cpp  notifier.h  params_parser.cpp  params_parser.h  syslogger.cpp  syslogger.h  timeout_worker.cpp  timeout_worker.h
tests/: CMakeLists.txt  test.cpp  test_crc.cpp  test_script.py
